feat: Add avatar/banner MCP tools for users and spaces - EXO-88348
Add four approval-gated MCP tools:
- set_my_avatar / set_my_banner (UserMcpTool): set the current user's
  profile avatar/banner; act as the current user (self only).
- set_space_avatar / set_space_banner (SpaceMcpTool): manager-only
  (canManageSpace) update of a space's avatar/banner.

Each accepts one of three mutually-exclusive image sources - a public
http(s) URL, base64 bytes, or an ACL-checked reference to a file
already attached to a readable platform object (attachment_object_type
+ attachment_object_id, the seam EVA uses to forward a chat image).

Centralize that 3-source resolution (SSRF-guarded fetch + ACL-enforced
attachment read) into UploadToolUtils.resolveImage(...) and refactor
ActivityMcpTool to use it, so no SSRF/IDOR-sensitive logic is
duplicated. Avatars build AvatarAttachment/BannerAttachment straight
from the resolved bytes, mirroring the platform's own UserRest/SpaceRest.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>